--- a/styles.css
+++ b/styles.css
@@ -65,12 +65,17 @@ h2 {
 }
 
 .explanation {
-    background-color: #f9f9f9;
+    /* text-align: center; */
+    background-color: #fff;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    /*background-color: #f9f9f9;
     padding: 30px;
     margin: 30px auto;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    text-align: left;
+    /* text-align: left; */
     position: absolute;
     top: 100%; /* Position the explanation just below the container */
     left: 0;
