--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,7 @@ h2 {
     top: 100%; /* Position the explanation just below the container */
     left: 0;
     transform: translateY(30px); /* Add some space below the container */
+    padding-bottom: 50px; /* Add extra padding at the bottom */
 }
 
 .explanation h2 {
